--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,7 +22,10 @@ jobs:
       - name: test
         run: npm run test
       - name: e2e tests
+        run: |
+          ls -l
         uses: cypress-io/github-action@v4
         with:
           command: npm run test:e2e
           start: npm run start-prod
+          wait-on: http://localhost:5000
