--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,11 +21,12 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
+      - name: files
+        run: |
+          ls -l
       - name: e2e tests
         uses: cypress-io/github-action@v4
         with:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-        run: |
-          ls -l
