--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,12 +21,10 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
-      - name: files
-        run: |
-          ls -l
       - name: e2e tests
         uses: cypress-io/github-action@v4
         with:
+          browser: chrome
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
