add rollback, break procfile and change version

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,3 +36,4 @@ jobs:
           heroku_email: mikko.e.hyyrylainen@gmail.com
           healthcheck: http://cryptic-wildwood-87634.herokuapp.com/health
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
