--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,7 @@ name: Deployment pipeline
 on:
   push:
     branches:
-      - '**'
+      - master
   pull_request:
     branches: [master]
     types: [opened, synchronized]
