--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,6 +48,18 @@ jobs:
           severity: info
           details: A new version was deployed succesfully
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Deploy succeeded
+        env:
+          USER: ${{ github.actor }}
+        uses: rjstone/discord-webhook-notify@v1
+        if: success()
+        with:
+          severity: info
+          color: "#0fd415"
+          text: New version of Pokedex deployed successfully!
+          description: http://cryptic-wildwood-87634.herokuapp.com
+          footer: Made by $USER
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
   tag_release:
     needs: [simple_deployment_pipeline]
