--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,23 +42,16 @@ jobs:
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
       - name: Deployment succeeded
-        uses: rjstone/discord-webhook-notify@v1
-        if: ${{ success() }}
-        with:
-          severity: info
-          details: A new version was deployed succesfully
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - name: Deploy succeeded
         env:
           USER: ${{ github.actor }}
         uses: rjstone/discord-webhook-notify@v1
         if: success()
         with:
           severity: info
-          color: "#0fd415"
+          color: '#08c40e'
           text: New version of Pokedex deployed successfully!
           description: http://cryptic-wildwood-87634.herokuapp.com
-          footer: Made by $USER
+          footer: 'Made by ${{ USER }}'
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
   tag_release:
