--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,8 +42,6 @@ jobs:
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
       - name: Deployment succeeded
-        env:
-          USER: ${{ github.actor }}
         uses: rjstone/discord-webhook-notify@v1
         if: success()
         with:
@@ -51,7 +49,7 @@ jobs:
           color: '#08c40e'
           text: New version of Pokedex deployed successfully!
           description: http://cryptic-wildwood-87634.herokuapp.com
-          footer: 'Made by ${{ USER }}'
+          footer: 'Made by ${{ github.actor }}'
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
   tag_release:
