--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,24 +41,24 @@ jobs:
           healthcheck: http://cryptic-wildwood-87634.herokuapp.com/health
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
-      - name: Deployment succeeded
-        uses: rjstone/discord-webhook-notify@v1
-        if: ${{ success() }}
-        with:
-          severity: info
-          text: New version of Pokedex deployed successfully!
-          description: Runs at http://cryptic-wildwood-87634.herokuapp.com
-          footer: 'Author ${{ github.event.head_commit.committer.username }}'
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - name: Deployment failed
-        uses: rjstone/discord-webhook-notify@v1
-        if: ${{ failure() }}
-        with:
-          severity: error
-          text: Build failed
-          description: 'Commit ${{ github.event.head_commit.url }} broke the build'
-          footer: 'Commit by ${{ github.event.head_commit.committer.username }}'
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      #- name: Deployment succeeded
+      #  uses: rjstone/discord-webhook-notify@v1
+      #  if: ${{ success() }}
+      #  with:
+      #    severity: info
+      #    text: New version of Pokedex deployed successfully!
+      #    description: Runs at http://cryptic-wildwood-87634.herokuapp.com
+      #    footer: 'Author ${{ github.event.head_commit.committer.username }}'
+      #    webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      #- name: Deployment failed
+      #  uses: rjstone/discord-webhook-notify@v1
+      #  if: ${{ failure() }}
+      #  with:
+      #    severity: error
+      #    text: Build failed
+      #    description: 'Commit ${{ github.event.head_commit.url }} broke the build'
+      #    footer: 'Commit by ${{ github.event.head_commit.committer.username }}'
+      #    webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
   tag_release:
     needs: [simple_deployment_pipeline]
