--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Check that the service is running
         uses: jtalk/url-health-check-action@v2
         with:
-          url: http://cryptic-wildwood-87634.herokuapp.com/
+          url: http://cryptic-wildwood-87634.herokuapp.com/broken
           max-attempts: 3
-          retry-delay: 5s
+          retry-delay: 6s
