--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -1,9 +1,8 @@
 name: Health check
 
 on:
-  push:
-    branches: 
-      - master
+  schedule:
+    - cron: '0,10,20,30,40,50, * * * *'
 
 jobs:
   health_check_job:
