--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Check that the service is running
         uses: jtalk/url-health-check-action@v2
         with:
-          url: http://cryptic-wildwood-87634.herokuapp.com/brokenLink
+          url: http://cryptic-wildwood-87634.herokuapp.com
           max-attempts: 3
           retry-delay: 6s
