--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
           browser: chrome
-      - if: ${{ github.event_name == 'push' }}
+      - if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip')}}
         name: deploy
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
